Keeps skillscard a square and stops hiding honors behind skills table

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ h3 {
 
 .skillsdetail {
     position: absolute;
-    display: flex;
+    display: none;
     flex-direction: column;
     /* pointer-events: none; */
     /* width: 0; */
@@ -269,6 +269,7 @@ h3 {
 
 .shown {
     z-index: 10;
+    display: flex !important;
 }
 
 .shown:after {
@@ -286,15 +287,21 @@ h3 {
     display: flex;
     flex-direction: row;
     gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .cardcontainer {
-    aspect-ratio: 1/1;
+    /* aspect-ratio: 1/1; */
     width: 50%;
-    flex: 1 1 0;
+    min-width: 300px;
+    height: 0px;
+    min-height: 300px;
+    padding-bottom: 50%;
     background-color: transparent;
     perspective: 1000px;
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 .skillcard {
@@ -303,7 +310,7 @@ h3 {
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    position: relative;
+    position: absolute;
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
